# spinning-cube

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: error.hpp  index_buffer.hpp  shader.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
include/spinning-cube/: shader.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
res/shaders/: basic.frag  basic.vert
src/: error.cpp  index_buffer.cpp  main.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
